--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "ahmet@ahmet.com",
+    "Issuer": "ahmet@ahmet.com",
+    "AccesTokenExpiration": 10,
+    "SecurityKey": "mysupersecretKeymysupersecretKey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
